--- a/repo/sanity/trunk/intact-sanity-commons/pom.xml
+++ b/repo/sanity/trunk/intact-sanity-commons/pom.xml
@@ -18,10 +18,11 @@
         <plugins>
             <plugin>
                 <groupId>org.jvnet.jaxb2.maven2</groupId>
-			    <artifactId>maven-jaxb2-plugin</artifactId>
+	            <artifactId>maven-jaxb2-plugin</artifactId>
                 <configuration>
                     <schemaDirectory>${project.basedir}/src/main/resources/META-INF</schemaDirectory>
                     <bindingDirectory>${project.basedir}/src/main/resources/META-INF</bindingDirectory>
+                    <extension>true</extension>
                 </configuration>
                 <executions>
                     <execution>
@@ -47,7 +48,7 @@
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>2.1</version>
+            <version>2.1.3</version>
         </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
