--- a/repo/bridges/trunk/coredep/intact-cdb/pom.xml
+++ b/repo/bridges/trunk/coredep/intact-cdb/pom.xml
@@ -19,6 +19,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.bridges</groupId>
             <artifactId>intact-citexplore</artifactId>
+            <version>${pom.version}</version>
         </dependency>
 
         <dependency>
