--- a/repo/data-exchange/trunk/imex/intact-imex-import/pom.xml
+++ b/repo/data-exchange/trunk/imex/intact-imex-import/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.sanity</groupId>
             <artifactId>intact-sanity-check</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
