--- a/repo/dbupdate/trunk/pom.xml
+++ b/repo/dbupdate/trunk/pom.xml
@@ -19,8 +19,8 @@
 
     <properties>
         <currentVersion>${version}</currentVersion>
-        <bridges.version>2.0.1-SNAPSHOT</bridges.version>
-        <core.version>1.8.0-SNAPSHOT</core.version>
+        <bridges.version>2.0.2</bridges.version>
+        <core.version>1.8.2</core.version>
     </properties>
 
     <scm>
@@ -38,17 +38,6 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>uk.ac.ebi.intact.dbupdate</groupId>
-                <artifactId>intact-proteins-update</artifactId>
-                <version>${currentVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>uk.ac.ebi.intact.dbupdate</groupId>
-                <artifactId>intact-biosource-update</artifactId>
-                <version>${currentVersion}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>uk.ac.ebi.intact.core</groupId>
                 <artifactId>intact-core</artifactId>
                 <version>${core.version}</version>
@@ -57,7 +46,7 @@
             <dependency>
                 <groupId>uk.ac.ebi.intact.plugins</groupId>
                 <artifactId>intact-plugin</artifactId>
-                <version>2.0</version>
+                <version>2.1</version>
             </dependency>
 
             <dependency>
