--- a/repo/dbupdate/tags/dbupdate-master-2.0.0/intact-biosource-update/pom.xml
+++ b/repo/dbupdate/tags/dbupdate-master-2.0.0/intact-biosource-update/pom.xml
@@ -6,11 +6,11 @@
     <parent>
         <groupId>uk.ac.ebi.intact.dbupdate</groupId>
         <artifactId>dbupdate-master</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
 
     <artifactId>intact-biosource-update</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
 
     <name>IntAct Database Update :: BioSource Update</name>
 
