--- a/repo/dbupdate/tags/dbupdate-master-2.0.0/pom.xml
+++ b/repo/dbupdate/tags/dbupdate-master-2.0.0/pom.xml
@@ -11,7 +11,7 @@
     <groupId>uk.ac.ebi.intact.dbupdate</groupId>
     <artifactId>dbupdate-master</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
 
     <name>IntAct Database Update</name>
     <description>Database Update Master POM</description>
