--- a/repo/data-exchange/trunk/psimi/legacy/data-conversion/pom.xml
+++ b/repo/data-exchange/trunk/psimi/legacy/data-conversion/pom.xml
@@ -17,32 +17,23 @@
     <description>Import/Exports from/to PSI files</description>
 
     <dependencies>
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.3</version>
-        </dependency>
 
         <dependency>
-            <groupId>uk.ac.ebi.intact.service.commons</groupId>
-            <artifactId>app-commons</artifactId>
-            <version>1.6.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>uk.ac.ebi.intact.dbupdate</groupId>
-            <artifactId>intact-proteins-update</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <groupId>uk.ac.ebi.intact.bridges</groupId>
+            <artifactId>intact-go</artifactId>
+            <version>2.0.2</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.intact.bridges.coredep</groupId>
             <artifactId>intact-cdb</artifactId>
-            <version>2.0.1-SNAPSHOT</version>
+            <version>2.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.intact.dbupdate</groupId>
+            <artifactId>intact-proteins-update</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>uk.ac.ebi.intact.plugins</groupId>
@@ -54,6 +45,17 @@
                    <artifactId>intact-core</artifactId>
                </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.3</version>
         </dependency>
     </dependencies>
 
