--- a/repo/maven-plugins/uniprotexport-maven-plugin/trunk/pom.xml
+++ b/repo/maven-plugins/uniprotexport-maven-plugin/trunk/pom.xml
@@ -25,30 +25,17 @@
         <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/maven-plugins/uniprotexport-maven-plugin/trunk</url>
     </scm>
 
-    <properties>
-       <maven.test.skip>true</maven.test.skip>
-    </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>uk.ac.ebi.intact.plugins</groupId>
-                <artifactId>dbtest-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
     <dependencies>
-        <dependency>
-            <groupId>uk.ac.ebi.intact.templates</groupId>
-            <artifactId>h2db-with-cv</artifactId>
-            <type>zip</type>
-            <scope>provided</scope>
-        </dependency>
 
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.uniprotexport</groupId>
             <artifactId>intact-uniprot-export</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
+            <artifactId>intact-psixml-exchange</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
 
