--- a/repo/data-exchange/trunk/psimi/psixml/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psixml/pom.xml
@@ -26,7 +26,7 @@
             <dependency>
                 <groupId>psidev.psi.mi</groupId>
                 <artifactId>psi25-xml</artifactId>
-                <version>1.5.0-SNAPSHOT</version>
+                <version>1.5.0</version>
             </dependency>
 
             <dependency>
