--- a/repo/service/trunk/search/binary/binary-webservice/pom.xml
+++ b/repo/service/trunk/search/binary/binary-webservice/pom.xml
@@ -19,6 +19,29 @@
         <module>wsclient</module>
     </modules>
 
+    <profiles>
+    <!-- Mac OS X has not a tools.jar! -->
+    <profile>
+      <id>tools.jar</id>
+      <activation>
+        <property>
+          <name>java.vendor</name>
+          <value>Sun Microsystems Inc.</value>
+       </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>sun.jdk</groupId>
+          <artifactId>tools</artifactId>
+          <version>1.5.0</version>
+          <scope>system</scope>
+          <systemPath>${java.home}/../lib/tools.jar</systemPath>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
+
+
     <!-- common dependencies between service and client -->
     <dependencies>
 
@@ -32,13 +55,6 @@
             <groupId>xfire</groupId>
             <artifactId>xfire-jsr181-api</artifactId>
             <version>1.0-M1</version>
-        </dependency>
-        <dependency>
-            <groupId>sun.jdk</groupId>
-            <artifactId>tools</artifactId>
-            <version>1.5.0</version>
-            <scope>system</scope>
-            <systemPath>${java.home}/../lib/tools.jar</systemPath>
         </dependency>
     </dependencies>
 
