--- a/repo/service/trunk/pom.xml
+++ b/repo/service/trunk/pom.xml
@@ -26,7 +26,7 @@
         <user>${env.USERNAME}</user>
         <appRoot>/intact</appRoot>
 
-        <core.version>1.8.1-SNAPSHOT</core.version>
+        <core.version>1.8.3</core.version>
     </properties>
 
     <modules>
