--- a/repo/sanity/trunk/pom.xml
+++ b/repo/sanity/trunk/pom.xml
@@ -11,7 +11,7 @@
     <groupId>uk.ac.ebi.intact.sanity</groupId>
     <artifactId>sanity-master</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.1</version>
+    <version>2.1-SNAPSHOT</version>
 
     <name>IntAct Sanity</name>
     <description>Sanity Master POM</description>
@@ -23,9 +23,9 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/sanity/tags/sanity-master-2.0.1</connection>
-        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/sanity/tags/sanity-master-2.0.1</developerConnection>
-        <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/sanity/tags/sanity-master-2.0.1</url>
+        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/sanity/trunk</connection>
+        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/sanity/trunk</developerConnection>
+        <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/sanity/trunk</url>
     </scm>
 
     <modules>
