--- a/repo/sanity/trunk/sanity-maven-plugin/pom.xml
+++ b/repo/sanity/trunk/sanity-maven-plugin/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <artifactId>sanity-master</artifactId>
         <groupId>uk.ac.ebi.intact.sanity</groupId>
-        <version>2.0.1</version>
+        <version>2.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>sanity-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>2.0.1</version>
+    <version>2.1-SNAPSHOT</version>
 
     <name>IntAct Sanity :: Plugins :: Sanity Mojo</name>
 
