--- a/repo/data-exchange/trunk/pom.xml
+++ b/repo/data-exchange/trunk/pom.xml
@@ -106,7 +106,7 @@
             <dependency>
                 <groupId>uk.ac.ebi.intact.plugins</groupId>
                 <artifactId>intact-plugin</artifactId>
-                <version>2.1-SNAPSHOT</version>
+                <version>2.2</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.maven</groupId>
