--- a/repo/bridges/trunk/legacy/intact-ols/pom.xml
+++ b/repo/bridges/trunk/legacy/intact-ols/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.bridges.legacy</groupId>
         <artifactId>bridges-legacy-master</artifactId>
-        <version>2.0-beta-9-SNAPSHOT</version>
+        <version>2.0-beta-9</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
