--- a/repo/bridges/trunk/legacy/pom.xml
+++ b/repo/bridges/trunk/legacy/pom.xml
@@ -12,7 +12,7 @@
     <groupId>uk.ac.ebi.intact.bridges.legacy</groupId>
     <artifactId>bridges-legacy-master</artifactId>
     <packaging>pom</packaging>
-    <version>2.0-beta-9-SNAPSHOT</version>
+    <version>2.0-beta-9</version>
 
     <name>IntAct Bridges :: Legacy</name>
 
