--- a/repo/bridges/trunk/legacy/pom.xml
+++ b/repo/bridges/trunk/legacy/pom.xml
@@ -12,7 +12,7 @@
     <groupId>uk.ac.ebi.intact.bridges.legacy</groupId>
     <artifactId>bridges-legacy-master</artifactId>
     <packaging>pom</packaging>
-    <version>2.0-beta-9</version>
+    <version>2.0-beta-10-SNAPSHOT</version>
 
     <name>IntAct Bridges :: Legacy</name>
 
@@ -23,10 +23,4 @@
     <modules>
        <module>intact-ols</module>
     </modules>
-
-  <scm>
-    <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/bridges/tags/bridges-legacy-master-2.0-beta-9</connection>
-    <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/bridges/tags/bridges-legacy-master-2.0-beta-9</developerConnection>
-    <url>http://intact.svn.sourceforge.net/viewcvs.cgi/intact/repo/bridges/tags/bridges-legacy-master-2.0-beta-9</url>
-  </scm>
 </project>
