--- a/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab-converters/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab-converters/pom.xml
@@ -23,6 +23,12 @@
         </dependency>
 
         <dependency>
+            <groupId>psidev.psi.mi</groupId>
+            <artifactId>psimitab</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-core</artifactId>
         </dependency>
