--- a/repo/data-exchange/trunk/psimi/psimitab/intact-interolog-prediction/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-interolog-prediction/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>psidev.psi.mi</groupId>
             <artifactId>psimitab</artifactId>
-            <version>1.5.1-SNAPSHOT</version>
+            <version>1.5.0</version>
         </dependency>
 
         <dependency>
