--- a/repo/data-exchange/trunk/plugins/cv-maven-plugin/pom.xml
+++ b/repo/data-exchange/trunk/plugins/cv-maven-plugin/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <groupId>uk.ac.ebi.intact.dataexchange.plugins</groupId>
         <artifactId>plugins-master</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     
     <artifactId>cv-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
 
     <name>IntAct Data Exchange :: Plugins :: Cv Maven Plugin</name>
     <description>Plugin for IntAct, to import/export CVs from/to the database</description>
