--- a/repo/data-exchange/trunk/psimi/psixml/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psixml/pom.xml
@@ -4,14 +4,14 @@
     <parent>
         <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
         <artifactId>psimi-master</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>intact-psixml</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
 
     <name>IntAct Data Exchange :: PSI MI :: XML</name>
     <description>PSIXML for IntAct</description>
