--- a/repo/maven-plugins/predict-maven-plugin/trunk/pom.xml
+++ b/repo/maven-plugins/predict-maven-plugin/trunk/pom.xml
@@ -28,7 +28,7 @@
        <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange</groupId>
             <artifactId>intact-dbutils</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
 
     </dependencies>
