--- a/repo/maven-plugins/uniprotexport-maven-plugin/trunk/pom.xml
+++ b/repo/maven-plugins/uniprotexport-maven-plugin/trunk/pom.xml
@@ -30,13 +30,13 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.uniprotexport</groupId>
             <artifactId>intact-uniprot-export</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
 
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psixml-exchange</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
 
         <dependency>
