--- a/repo/current/plugins-miscel/pom.xml
+++ b/repo/current/plugins-miscel/pom.xml
@@ -44,6 +44,7 @@
         <module>ebeye-export-maven-plugin</module>
         <module>fasta-maven-plugin</module>
         <module>maven-editortopics-plugin</module>
+        <module>dbupdate-maven-plugin</module>
         <module>psimitab-maven-plugin</module>
         <module>psixml-generator-maven-plugin</module>
         <module>reactome-maven-plugin</module>
