--- a/repo/current/plugins-miscel/pom.xml
+++ b/repo/current/plugins-miscel/pom.xml
@@ -25,9 +25,9 @@
     <description>Intact maven plugins</description>
 
     <scm>
-        <connection>scm:svn:https://svn.sourceforge.net/svnroot/intact/repo/current/plugins/tags/plugins-miscel-1.6.0</connection>
-        <developerConnection>scm:svn:https://svn.sourceforge.net/svnroot/intact/repo/current/plugins/tags/plugins-miscel-1.6.0</developerConnection>
-        <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/current/plugins/tags/plugins-miscel-1.6.0</url>
+        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/current/plugins/tags/plugins-miscel-1.6.0</connection>
+        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/current/plugins/tags/plugins-miscel-1.6.0</developerConnection>
+        <url>http://intact.svn.sourceforge.net/viewcvs.cgi/intact/repo/current/plugins/tags/plugins-miscel-1.6.0</url>
     </scm>
 
     <properties>
